--- a/index.html
+++ b/index.html
@@ -7,12 +7,33 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="index.css">
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark p-3">
+      <div class="d-flex justify-content-around align-items-center w-100">
+        <a class="navbar-brand" href="#">
+          <img src="/images/Logo.webp" height="45" alt="">
+        </a>
+        <ul class="navbar-nav my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <li class="nav-item">
+            <a class="nav-link text-white px-4" href="#">Games we built</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white px-4" href="#">About us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white px-4" href="#">Blog</a>
+          </li>          
+        </ul>
+        <form class="d-flex">
+          <button class="btn btn-danger rounded-pill px-5 py-4" type="submit">Contact Us</button>
+        </form>
+        </div>
+      </div>
+    </nav>
+    
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
