--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark p-3">
-      <div class="d-flex justify-content-around align-items-center w-100">
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark p-3 fixed-top d-lg-block d-none">
+      <div class="d-flex container justify-content-between align-items-center w-100">
         <a class="navbar-brand" href="#">
-          <img src="/images/Logo.webp" height="45" alt="">
+          <img src="/images/Logo.webp" height="41" alt="">
         </a>
         <ul class="navbar-nav my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
           <li class="nav-item">
@@ -28,11 +28,48 @@
           </li>          
         </ul>
         <form class="d-flex">
-          <button class="btn btn-danger rounded-pill px-5 py-4" type="submit">Contact Us</button>
+          <button class="btn btn-danger contact_us_btn px-5 py-4" type="submit">Contact Us</button>
         </form>
         </div>
       </div>
     </nav>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark p-3 fixed-top d-lg-none">
+      <div class="d-flex justify-content-between mx-5 align-items-center w-100">
+        <a class="navbar-brand" href="#">
+          <img src="/images/Logo.webp" height="41" alt="logo">
+        </a>
+          <button class="btn btn-dark border-0 px-5 py-4" type="submit">
+            <img src="/images/menu-icon.svg" height="50" alt="">
+          </button>
+        </div>
+      </div>
+    </nav>
+
+    <section class="intro bg-dark">
+      <div class="container">
+        <div class="d-flex align-items-center justify-content-between" style="height: 100vh;">
+          <div class="col-md-7 p-0 m-0">
+            <h1 class="text-white text-start intro_headline">Double Coconut</h1>
+            <p class="intro_paragraph">Professional game design and development agency for mobile
+              and web3 projects. Specializing in Unity and HTML5.</p>
+          </div>
+          <div class="col-md-5 text-end p-0 m-0">
+            <img src="/images/intro_robot.png" alt="robot" class="img-fluid">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="learn-more bg-dark">
+      <div class="container">
+        <h2 class="text-white text-center learn_more_headline">Celebrating <strong class="text-danger">10 years</strong> of bringing our clients’ games to market on time and on budget</h2>
+        <p class="pt-5 text-center intro_paragraph">Double Coconut has been delighting partners for over a decade with our game design experience and industry-leading engineering capabilities. We specialize in mobile and web projects built in Unity and HTML5. Our full service design agency can bring your mobile, web3, Play-to-Earn or NFT project from concept to market.</p>
+        <div class="d-flex justify-content-center">
+          <div class="btn btn-secondary text-danger bg-dark learn_more_btn px-5 py-4 my-5" type="button">Learn more</div>
+        </div>
+      </div>
+    </section>
     
     <!-- Optional JavaScript; choose one of the two! -->
 
